--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,17 @@
 }
 
 
+section {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* container  */
 .container {
     width: 50%;
-    background-color: crimson;
     height: 300px;
 }
 
@@ -18,6 +26,9 @@
     clear: both;
 }
 
+
+
+/* items  */
 .items {
     float: left;
     width: 80%;
@@ -25,16 +36,74 @@
     background-color: cyan;
 }
 
+.item {
+    height: 100%;
+    position: relative;
+    display: none;
+}
+
+.item.active {
+    display: block;
+}
+
+.item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.item .text {
+    position: absolute;
+    right: 20px;
+    left: 10px;
+    bottom: 30px;
+    text-align: right;
+    color: white;
+}
+
+
+/* thumbs  */
 .thumbs {
     float: left;
     width: 20%;
     height: 100%;
-    background-color: darkblue;
+    position: relative;
 }
 
 .thumb {
     width: 100%;
     height: calc(100% / 5);
-    background-color: chocolate;
-    border: 1px solid black;
+    opacity: 0.5;
+}
+
+.thumb.active {
+    border: 2px solid white;
+    opacity: 1;
+}
+
+.thumb img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.prev .fas , .next .fas{
+    background-color: lightslategray;
+    border-radius: 50%;
+    padding: 4px;
+    margin: 10px 0;
+}
+
+.prev {
+    position: absolute;
+    top: 0;
+}
+
+.next {
+    position: absolute;
+    bottom: 0;
+}
+
+.prev , .next {
+    margin-left: 45%;
 }
